asset-chooser-styles.css
/* asset-chooser */
.zoom-alert-span {
  margin-top: 5px;
  display: inline-block;
  min-height: 14px;
  vertical-align: middle;
}

.toggleLayerVisibilityButton {
  font-size: 12px;
  background-color: #eeeeee;
  transition: transform 0.1s;
  padding-left: 8px;
  padding-right: 8px;
  min-width: 60px;
}

.toggleLayerVisibilityButton:hover {
  transform: scale(1.05);
  background-color: #f9f9f9;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.1);
}

.toggleLayerVisibilityButton:active {
  transform: scale(0.95);
}

/* .remove-asset-btn {
   transition: transform 0.1s; 
} */

.remove-asset-btn:hover {
  /* transform: scale(1.05); */
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 6px 10px 0 rgba(0, 0, 0, 0.1);
}

.remove-asset-btn:active {
  transform: scale(0.95);
}

#accessibility-icon {
  margin-right: 5px;
}

#edit-asset-selection-button {
  margin: 5px;
}
#cancel-asset-selection-button {
  margin: 5px;
}

/* Modal styles */
.modal::backdrop {
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
}

.modal {
  background-color: rgba(255, 255, 255, 1);
  border: 1px solid #888;
  width: 60%;
  border-radius: 5px;
}

.modal-header {
  margin: -16px -16px 0 -16px;
  background-color: #efefef;
  padding: 14px;
}

.modal-body {
  padding: 10px 0 10px 0;
  margin-top: 20px;
}

.close {
  color: #888;
  float: right;
  font-size: 24px;
  font-weight: bold;
  border: none;
  margin-top: -12px;
  margin-right: -12px;
}

.close:hover {
  cursor: pointer;
  color: black;
}

/* class to disable scrolling */
.no-scroll {
  overflow: hidden;
}

#accomodation-title {
  margin: 0;
  font-size: 1.25em;
  border-bottom: 0;
  box-shadow: 0 0 0 0;
}

#accomodation-subtitle {
  margin: 0;
  /* font-size: 1em; */
}

#accessibility-icon {
  margin-right: 5px;
}

/* #validity-message {
  min-height: 1.75em;
  display: block; 
} */

#asset-chooser-map-and-layer-data-wrapper {
  margin-top: 1em;
}

/* media queries */
@media screen and (max-width: 1280px) {
  .modal {
    width: 90%;
  }
}

/* .esri-attribution {
  display: none !important;
} */

